<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Freddie (Musenkishi) Lust-Hed
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.musenkishi.wally.views.TabBarView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:wally="http://schemas.android.com/apk/res-auto"
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       android:minHeight="@dimen/app_bar_height"
                                       android:gravity="center_vertical"
                                       android:orientation="horizontal"
                                       wally:tabBarColor="@color/Grey.Light"
                                       wally:tabBarSize="2dp">

    <com.musenkishi.wally.views.TabView
            android:id="@+id/tab_toplist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/default_selector"
            android:contentDescription="@string/title_section_toplist"
            wally:src="@drawable/ic_action_toplist"
            wally:text="@string/title_section_toplist"
            />

    <com.musenkishi.wally.views.TabView
        android:id="@+id/tab_latest"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@drawable/default_selector"
        android:contentDescription="@string/title_section_latest"
        wally:src="@drawable/ic_action_latest"
        wally:text="@string/title_section_latest"
        />

    <com.musenkishi.wally.views.TabView
            android:id="@+id/tab_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/default_selector"
            android:contentDescription="@string/title_section_search"
            wally:src="@drawable/ic_action_search"
            wally:text="@string/title_section_search"
            />

    <com.musenkishi.wally.views.TabView
            android:id="@+id/tab_random"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/default_selector"
            android:contentDescription="@string/title_section_random"
            wally:src="@drawable/ic_action_random"
            wally:text="@string/title_section_random"
            />

    <com.musenkishi.wally.views.TabView
            android:id="@+id/tab_saved"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/default_selector"
            android:contentDescription="@string/title_section_saved"
            wally:src="@drawable/ic_action_saved"
            wally:text="@string/title_section_saved"
            />

</com.musenkishi.wally.views.TabBarView>