<!--
  ~ Copyright (C) 2014 Freddie (Musenkishi) Lust-Hed
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    android:id="@+id/image_details_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey.Light"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:id="@+id/image_details_photo_layout_holder"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <RelativeLayout
            android:id="@+id/image_details_imageview_holder"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <uk.co.senab.photoview.PhotoView
                android:id="@+id/image_details_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_details_image_desc"/>

            <ProgressBar
                android:id="@+id/image_details_loader"
                android:layout_width="@dimen/default_press_size"
                android:layout_height="@dimen/default_press_size"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="visible"
                style="@style/ProgressBar.Custom.Download.Light"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image_details_photo_layout_holder"
        android:background="@color/Grey.Light"
        android:layout_marginTop="128dp"
        />

    <com.musenkishi.wally.views.ObservableScrollView
        android:id="@+id/image_details_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        tools:context=".activities.ImageDetailsActivity">

        <LinearLayout
            android:id="@+id/image_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_padding_negative"
            android:paddingLeft="@dimen/activity_details_scrollview_side_padding"
            android:paddingRight="@dimen/activity_details_scrollview_side_padding"
            android:clipToPadding="false"
            android:orientation="vertical">

            <RelativeLayout
                android:clipToPadding="false"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <LinearLayout
                    android:id="@+id/image_details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/toolbar_set_as"
                        style="@style/Button.Material.Flat"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_material_flat_height"
                        android:text="@string/action_set_as"
                        android:textColor="@color/Black.Light"/>

                    <Button
                        android:id="@+id/toolbar_save"
                        style="@style/Button.Material.Flat"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_material_flat_height"
                        android:text="@string/action_save"
                        android:textColor="@color/Black.Light"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/image_details_button_fullscreen"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_gap"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/floating_action_button"
                    android:scaleType="center"
                    android:src="@drawable/ic_mask_fullscreen"
                    android:scaleX="0.0"
                    android:scaleY="0.0"
                    android:contentDescription="@string/image_details_button_fullscreen"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="-4dp"
                android:background="@drawable/drop_shadow_top"/>

            <LinearLayout
                android:layoutAnimation="@anim/layout_details_animation"
                android:id="@+id/image_details_specs"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/Grey.Light"
                >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_height="@dimen/material_list_subheader_height"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/default_gap"
                        android:paddingRight="@dimen/default_gap"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:clipChildren="false"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:text="@string/image_details_uploaded_by"
                            android:textColor="@color/Grey.Dark"
                            android:textSize="14sp"
                            android:layout_weight="0.5"
                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:gravity="end"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:text="@string/image_details_source_title"
                            android:textColor="@color/Grey.Dark"
                            android:textSize="14sp"
                            android:layout_weight="0.5"
                            />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_height="@dimen/material_tile_text_twolined_height"
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/default_gap"
                        android:paddingLeft="@dimen/default_gap"
                        android:paddingRight="@dimen/default_gap"
                        android:clipChildren="false"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/image_details_uploader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:gravity="start"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Black.Transparent"
                            android:textSize="16sp"
                            />

                        <TextView
                            android:id="@+id/image_details_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/image_details_uploader"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="start"
                            android:gravity="end"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Black.Transparent"
                            android:textSize="16sp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:clickable="true"
                            />

                        <TextView
                            android:layout_below="@id/image_details_uploader"
                            android:id="@+id/image_details_upload_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Grey.Dark"
                            android:textSize="14sp"
                            />
                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_height="@dimen/material_list_subheader_height"
                        android:layout_width="match_parent"
                        android:paddingLeft="@dimen/default_gap"
                        android:paddingRight="@dimen/default_gap"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:text="@string/image_details_specs_title"
                        android:textColor="@color/Grey.Dark"
                        android:textSize="14sp"
                        />

                    <RelativeLayout
                        android:layout_height="@dimen/material_tile_text_twolined_height"
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/default_gap"
                        android:paddingLeft="@dimen/default_gap"
                        android:paddingRight="@dimen/default_gap"
                        android:clipChildren="false">

                        <TextView
                            android:id="@+id/image_details_resolution_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:gravity="start"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Black.Transparent"
                            android:textSize="16sp"
                            android:text="@string/image_details_specs_dimensions_title"
                            />

                        <TextView
                            android:id="@+id/image_details_resolution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image_details_resolution_title"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Grey.Dark"
                            android:textSize="14sp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_height="@dimen/material_tile_text_twolined_height"
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/default_gap"
                        android:paddingLeft="@dimen/default_gap"
                        android:paddingRight="@dimen/default_gap"
                        android:clipChildren="false">

                        <TextView
                            android:id="@+id/image_details_category_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:gravity="start"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Black.Transparent"
                            android:textSize="16sp"
                            android:text="@string/image_details_specs_category_title"
                            />

                        <TextView
                            android:id="@+id/image_details_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image_details_category_title"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Grey.Dark"
                            android:textSize="14sp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_height="@dimen/material_tile_text_twolined_height"
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/default_gap"
                        android:paddingLeft="@dimen/default_gap"
                        android:paddingRight="@dimen/default_gap"
                        android:clipChildren="false">

                        <TextView
                            android:id="@+id/image_details_rating_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:gravity="start"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Black.Transparent"
                            android:textSize="16sp"
                            android:text="@string/image_details_specs_rating_title"
                            />

                        <TextView
                            android:id="@+id/image_details_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image_details_rating_title"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/Grey.Dark"
                            android:textSize="14sp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.musenkishi.wally.views.ObservableScrollView>

    <View
        android:id="@+id/image_details_protective_shadow"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/protective_shadow_topdown"
        />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="@dimen/app_bar_height"
        android:background="@color/Transparent"
        custom:theme="@style/MyActionBar"
        custom:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

</RelativeLayout>
